syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "RSBC.DMF.CaseManagement.Service";

package CaseManagement;

service CaseManager {
  rpc Search (SearchRequest) returns (SearchReply);
}

message SearchRequest {
  string caseId = 1;
}

message SearchReply {
  repeated Case items = 1;
}

message Case{
	string caseId = 1;
	string createdBy = 2;
	google.protobuf.Timestamp createdOn = 3;
}
